2005-06-21 Gareth Jones <gareth_jones@users.berlios.de>

	* reroot/libreroot/Makefile, reroot/rerootd/Makefile: Trivial
	  simplification.

	* reroot/libreroot/memory.c (reroot_alloc): Used `error' instead of
	  `fputs' & `exit'.

	* reroot/libreroot/ipc.c, reroot/libreroot/ipc.h: Added.

	* reroot/libreroot/libc_symbols.txt: Added.

	* All files with copyright notices: Updated years to include 2005.

2005-06-16 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/binutils.pkg: Added --disable-nls to stage1 build
	  in order to remove a dependency on gettext.

	* profiles/lfs-6.1/grep.pkg: Removed --with-included-regexp because
	  those provided by grep itself are inferior to those from glibc.

2005-06-15 Gareth Jones <gareth_jones@users.berlios.de>

	* x86stepping/Makefile: Added build flags.
	* Makefile.defs: Removed x86stepping build flags.

	* reroot/*: Added current libreroot & rerootd sources.

2005-06-06 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/module-init-tools.pkg: Fixed instructions to ensure
	  that the modprobe.conf man-page does not get rebuilt.

2005-05-31 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/bzip2.pkg: Made use of the version variable.

2005-05-29 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*.pkg: Removed the (hopefully) last tracks of
	  custom changes to the LFS instructions.

	* profiles/lfs-6.1/linux.pkg: Upgraded to Linux 2.6.11.11.

2005-05-22 Oliver Brakmann <oliverbrakmann@users.berlios.de>

	* profiles/lfs-6.1/*: Brought the remaining package profiles up to date
	  wrt to LFS 6.1.

	* profiles/lfs-6.1/linux.pkg: Upgraded to Linux 2.6.11.9.
	* profiles/lfs-6.1/gzip.pkg: Added security fix.
	* profiles/lfs-6.1/glibc.pkg: Added a patch that fixes test suite
	  misbehaviour with Linux 2.6.11.
	* profiles/lfs-6.1/hotplug.pkg: Updated instructions.
	* profiles/lfs-6.1/iproute2.pkg: Replaced the patch with a sed.