@@ -1,4 +1,4 @@
-// libreroot initialization
+// libreroot libc function intercept declarations
 // Copyright (C) 2003-2005 Oliver Brakmann <oliverbrakmann@users.berlios.de> &
 // Gareth Jones <gareth_jones@users.berlios.de>
 //
@@ -16,27 +16,7 @@
 // this program; if not, write to the Free Software Foundation, Inc., 59 Temple
 // Place, Suite 330, Boston, MA  02111-1307  USA
 
-#include <dlfcn.h>
-// Use: libc_funcname = dlsym (RTLD_NEXT, "funcname");
-// Returns 0 if error, use dlerror () to return error string.  No need to free.
+#ifndef LIBREROOT_H
+# define LIBREROOT_H
 
-#include "libreroot.h"
-#include "reroot.h"
-
-// Initialize libreroot.  This function is called automatically when libreroot
-// is loaded.
-static void __attribute__ ((constructor))
-reroot_start ()
-{
-	// Initialize global variables based on environment variables.
-	reroot_env_init ();
-}
-
-// Destroy libreroot.  This function is called automatically when libreroot is
-// unloaded.
-static void __attribute__ ((destructor))
-reroot_finish ()
-{
-	// Deallocate global variables.
-	reroot_env_destroy ();
-}
+#endif
