@@ -19,6 +19,7 @@
 # Default build flags.
 CPPFLAGS := -I.. -D_GNU_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE_SOURCE
 CXXFLAGS := -g -pipe -Wall -W -Werror
+LDFLAGS := -pipe
 
 # What to build.
 program := rerootd
